[gd_scene load_steps=3 format=3 uid="uid://selector_personajes_nuevo"]

[ext_resource type="Script" path="res://Scripts/UI/SelectorPersonajes.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://selector_bg_new" path="res://imagenes_selector/selector.png" id="2_background"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_start_button"]
bg_color = Color(0.8, 0.2, 0.2, 0.95)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 0, 1)

[node name="SelectorPersonajes" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_background")
stretch_mode = 1

[node name="CharacterContainer" type="Node2D" parent="."]

[node name="SelectionIndicator" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 90.0
offset_bottom = 90.0
color = Color(1, 1, 0, 0.6)

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 200.0
offset_top = 450.0
offset_right = 360.0
offset_bottom = 490.0
theme_override_styles/normal = SubResource("StyleBoxFlat_start_button")
theme_override_font_sizes/font_size = 18
text = "¡COMENZAR CARRERA!"

[node name="InstructionsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -30.0
offset_right = 250.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 14
text = "Usa ← → ↑ ↓ para navegar | ENTER para iniciar | Click para seleccionar"
horizontal_alignment = 1